<resources>
    <string name="app_name">DigitalHouseMarvelApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="log_in">LOG IN</string>
    <string name="remember">Remember</string>
    <string name="title_login">Welcome to the Marvel HQ\'s</string>
    <string name="save">Save</string>
    <string name="name">Name</string>
    <string name="image_comic">Image Comic</string>
    <string name="back">back</string>
    <string name="register">Register</string>
    <string name="cover_details_comic">cover details comic</string>

    <string name="erro_senha">Informe a senha</string>
    <string name="erro_email">Informe o email</string>
    <string name="erro_nome">Informe o nome</string>
    <string name="minimo_senha">Minimo 6 caracteres</string>
    <string name="marvel_logo">marvel logo</string>
    <string name="Published">Published: </string>
    <string name="Price">Price: $ </string>
    <string name="Pages">Pages: </string>
</resources>