<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/dimen_23dp"
    android:background="@color/colorPrimaryDark"
    tools:context=".register.view.RegisterFragment">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:padding="@dimen/dimen_10dp"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imgBack_Register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_5dp"
                android:contentDescription="@string/back"
                android:src="@drawable/ic_baseline_arrow_back_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="225dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/register"
                android:textColor="@color/white"
                android:textSize="@dimen/dimen_25sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imgBack_Register"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.Toolbar>


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imgCall"
        android:layout_width="@dimen/dimen_150dp"
        android:layout_height="@dimen/dimen_150dp"
        android:layout_marginTop="@dimen/dimen_75dp"
        android:elevation="@dimen/dimen_10dp"
        android:scaleType="centerCrop"
        android:src="@drawable/user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_450dp"
        android:layout_margin="@dimen/dimem_15dp"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="@dimen/dimen_12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="15dp">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/dimen_12dp"
                app:layout_constraintBottom_toBottomOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="@dimen/dimen_12dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textName_Register"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimen_10dp"
                        android:hint="@string/name"
                        android:textColorHint="@color/colorPrimary"
                        app:boxBackgroundColor="@color/white">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textEmail_Register"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimen_10dp"
                        android:hint="@string/email"
                        android:textColorHint="@color/colorPrimary"
                        app:boxBackgroundColor="@color/white">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto"
                            android:inputType="textEmailAddress"/>

                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textPassword_Register"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimen_10dp"
                        android:hint="@string/password"
                        android:textColorHint="@color/colorPrimary"
                        app:boxBackgroundColor="@color/white">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto"
                            android:inputType="textPassword" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <Button
                        android:id="@+id/btnSave_Register"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimen_40dp"
                        android:background="@drawable/button_background"
                        android:fontFamily="@font/roboto_bold"
                        android:text="@string/save"
                        android:textColor="@color/white" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>